# TibCleaner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yml
data/ALL_FILES/ u/: LMeeeee9. u
data/ALL_FILES/bak/: LM259c87.BAK
data/ALL_FILES/bk!/: LM7c3185.BK!
data/ALL_FILES/cdr/: LM15aaba.cdr
data/ALL_FILES/csv/: file_catalog_1.csv  file_catalog_3.csv
data/ALL_FILES/db/: LM4e439a.db
data/ALL_FILES/doc/: doc_D_0000370.doc
data/ALL_FILES/html/: html_C_0000003.html
data/ALL_FILES/ini/: LMe2f6d2.ini
data/ALL_FILES/lst/: LM1acf04.lst  LM2bd05f.lst
data/ALL_FILES/mht/: LM59c10d.mht
data/ALL_FILES/odt/: LM40a6c1.odt  LM91768d.odt
data/ALL_FILES/pc/: LM04291d.PC  LM2d7056.PC
data/RTF/: rtf_D_0002078.txt  rtf_D_0002092.txt
data/docx/: docx_C_0000055.txt  docx_C_0000056.txt  docx_D_0000111.txt
data/epub/: epub_C_0000019.txt  ༄༅། །དབུ་མ་རྩ་བ་ཤེས་རབ་ཀྱི་འགྲེལ་བ་འཐད་པའི་རྒྱན་ཅེས་བྱ་བ་བཞུགས་སོ།།.txt
data/htm/: html_D_0000000.txt
data/html/: html_C_0000004.txt
data/rtf/: rtf_C_0000006.txt  rtf_C_0000008.txt
data/tokenized_text/: LM000669.TXT
src/tibcleaner/: TXT_to_txt.py  checkpoint.py  config.py  convert_doc.py  convert_docx.py  doc_to_docx.py  docx_to_txt.py  epub_to_txt.py  file_analysis.py  filter.py  html_to_txt.py  img_to_jpeg.py  multi_processing.py  pdf_to_txt_and_jpeg.py  pipeline.py  renaming_files.py  rtf_to_txt.py  text_files_tokenizer.py  text_tokenizer.py  txt_regroup.py  utils.py  zip_rename_unzip.py  zip_to_unzip.py
tests/: test_conversion.py  test_example.py  test_tokenizer.py  test_zip_rar_extract.py
(+97 files in other folders)
